rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aq.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 46,
      "expression": {
        "arguments": [
          {
            "type": "LabeledArg",
            "label": {
              "commentStart": 4,
              "end": 10,
              "moduleId": 0,
              "name": "number",
              "start": 4,
              "type": "Identifier"
            },
            "arg": {
              "commentStart": 13,
              "end": 14,
              "moduleId": 0,
              "raw": "5",
              "start": 13,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 5.0,
                "suffix": "None"
              }
            }
          },
          {
            "type": "LabeledArg",
            "label": {
              "commentStart": 16,
              "end": 19,
              "moduleId": 0,
              "name": "msg",
              "start": 16,
              "type": "Identifier"
            },
            "arg": {
              "commentStart": 22,
              "end": 29,
              "moduleId": 0,
              "raw": "\"hello\"",
              "start": 22,
              "type": "Literal",
              "type": "Literal",
              "value": "hello"
            }
          },
          {
            "type": "LabeledArg",
            "label": {
              "commentStart": 31,
              "end": 33,
              "moduleId": 0,
              "name": "id",
              "start": 31,
              "type": "Identifier"
            },
            "arg": {
              "abs_path": false,
              "commentStart": 34,
              "end": 45,
              "moduleId": 0,
              "name": {
                "commentStart": 34,
                "end": 45,
                "moduleId": 0,
                "name": "aIdentifier",
                "start": 34,
                "type": "Identifier"
              },
              "path": [],
              "start": 34,
              "type": "Name",
              "type": "Name"
            }
          }
        ],
        "callee": {
          "abs_path": false,
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": {
            "commentStart": 0,
            "end": 3,
            "moduleId": 0,
            "name": "log",
            "start": 0,
            "type": "Identifier"
          },
          "path": [],
          "start": 0,
          "type": "Name"
        },
        "commentStart": 0,
        "end": 46,
        "moduleId": 0,
        "start": 0,
        "type": "CallExpressionKw",
        "type": "CallExpressionKw",
        "unlabeled": null
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 46,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
