rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ar.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 7,
      "expression": {
        "commentStart": 0,
        "end": 7,
        "left": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "raw": "5",
          "start": 0,
          "type": "Literal",
          "type": "Literal",
          "value": {
            "value": 5.0,
            "suffix": "None"
          }
        },
        "moduleId": 0,
        "operator": "+",
        "right": {
          "commentStart": 4,
          "end": 7,
          "moduleId": 0,
          "raw": "\"a\"",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": "a"
        },
        "start": 0,
        "type": "BinaryExpression",
        "type": "BinaryExpression"
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 7,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
