rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__at.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 12,
      "expression": {
        "arguments": [],
        "callee": {
          "abs_path": false,
          "commentStart": 0,
          "end": 4,
          "moduleId": 0,
          "name": {
            "commentStart": 0,
            "end": 4,
            "moduleId": 0,
            "name": "line",
            "start": 0,
            "type": "Identifier"
          },
          "path": [],
          "start": 0,
          "type": "Name"
        },
        "commentStart": 0,
        "end": 12,
        "moduleId": 0,
        "start": 0,
        "type": "CallExpressionKw",
        "type": "CallExpressionKw",
        "unlabeled": {
          "commentStart": 5,
          "elements": [
            {
              "commentStart": 6,
              "end": 7,
              "moduleId": 0,
              "raw": "0",
              "start": 6,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 0.0,
                "suffix": "None"
              }
            },
            {
              "abs_path": false,
              "commentStart": 9,
              "end": 10,
              "moduleId": 0,
              "name": {
                "commentStart": 9,
                "end": 10,
                "moduleId": 0,
                "name": "l",
                "start": 9,
                "type": "Identifier"
              },
              "path": [],
              "start": 9,
              "type": "Name",
              "type": "Name"
            }
          ],
          "end": 11,
          "moduleId": 0,
          "start": 5,
          "type": "ArrayExpression",
          "type": "ArrayExpression"
        }
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 12,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
