rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__au.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 96,
        "id": {
          "commentStart": 0,
          "end": 8,
          "moduleId": 0,
          "name": "cylinder",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 11,
                "end": 24,
                "moduleId": 0,
                "name": {
                  "commentStart": 11,
                  "end": 24,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 11,
                  "type": "Identifier"
                },
                "path": [],
                "start": 11,
                "type": "Name"
              },
              "commentStart": 11,
              "end": 28,
              "moduleId": 0,
              "start": 11,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 25,
                "end": 27,
                "moduleId": 0,
                "name": {
                  "commentStart": 25,
                  "end": 27,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 25,
                  "type": "Identifier"
                },
                "path": [],
                "start": 25,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 41,
                    "end": 47,
                    "moduleId": 0,
                    "name": "center",
                    "start": 41,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 50,
                    "elements": [
                      {
                        "commentStart": 51,
                        "end": 52,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 51,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      },
                      {
                        "commentStart": 54,
                        "end": 55,
                        "moduleId": 0,
                        "raw": "0",
                        "start": 54,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 0.0,
                          "suffix": "None"
                        }
                      }
                    ],
                    "end": 56,
                    "moduleId": 0,
                    "start": 50,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                },
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 58,
                    "end": 64,
                    "moduleId": 0,
                    "name": "radius",
                    "start": 58,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 67,
                    "end": 69,
                    "moduleId": 0,
                    "raw": "22",
                    "start": 67,
                    "type": "Literal",
                    "type": "Literal",
                    "value": {
                      "value": 22.0,
                      "suffix": "None"
                    }
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 34,
                "end": 40,
                "moduleId": 0,
                "name": {
                  "commentStart": 34,
                  "end": 40,
                  "moduleId": 0,
                  "name": "circle",
                  "start": 34,
                  "type": "Identifier"
                },
                "path": [],
                "start": 34,
                "type": "Name"
              },
              "commentStart": 34,
              "end": 70,
              "moduleId": 0,
              "start": 34,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 84,
                    "end": 90,
                    "moduleId": 0,
                    "name": "length",
                    "start": 84,
                    "type": "Identifier"
                  },
                  "arg": {
                    "commentStart": 93,
                    "end": 95,
                    "moduleId": 0,
                    "raw": "14",
                    "start": 93,
                    "type": "Literal",
                    "type": "Literal",
                    "value": {
                      "value": 14.0,
                      "suffix": "None"
                    }
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 76,
                "end": 83,
                "moduleId": 0,
                "name": {
                  "commentStart": 76,
                  "end": 83,
                  "moduleId": 0,
                  "name": "extrude",
                  "start": 76,
                  "type": "Identifier"
                },
                "path": [],
                "start": 76,
                "type": "Name"
              },
              "commentStart": 76,
              "end": 96,
              "moduleId": 0,
              "start": 76,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 11,
          "end": 96,
          "moduleId": 0,
          "start": 11,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 96,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 97,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
