rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aw.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 87,
        "id": {
          "commentStart": 0,
          "end": 7,
          "moduleId": 0,
          "name": "numbers",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 10,
          "elements": [
            {
              "commentStart": 24,
              "end": 25,
              "moduleId": 0,
              "raw": "1",
              "start": 24,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 1.0,
                "suffix": "None"
              }
            },
            {
              "commentStart": 75,
              "end": 76,
              "moduleId": 0,
              "raw": "3",
              "start": 75,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 3.0,
                "suffix": "None"
              }
            }
          ],
          "end": 87,
          "moduleId": 0,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "1": [
                {
                  "commentStart": 39,
                  "end": 44,
                  "moduleId": 0,
                  "start": 39,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "A,",
                    "style": "line"
                  }
                }
              ],
              "2": [
                {
                  "commentStart": 57,
                  "end": 62,
                  "moduleId": 0,
                  "start": 57,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "B,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 10,
          "type": "ArrayExpression",
          "type": "ArrayExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 87,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 87,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
