rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ax.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 87,
        "id": {
          "commentStart": 0,
          "end": 7,
          "moduleId": 0,
          "name": "numbers",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 10,
          "elements": [
            {
              "commentStart": 24,
              "end": 25,
              "moduleId": 0,
              "raw": "1",
              "start": 24,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 1.0,
                "suffix": "None"
              }
            },
            {
              "commentStart": 39,
              "end": 40,
              "moduleId": 0,
              "raw": "2",
              "start": 39,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 2.0,
                "suffix": "None"
              }
            }
          ],
          "end": 87,
          "moduleId": 0,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "2": [
                {
                  "commentStart": 54,
                  "end": 59,
                  "moduleId": 0,
                  "start": 54,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "A,",
                    "style": "line"
                  }
                }
              ],
              "3": [
                {
                  "commentStart": 72,
                  "end": 77,
                  "moduleId": 0,
                  "start": 72,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "B,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 10,
          "type": "ArrayExpression",
          "type": "ArrayExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 87,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 87,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
