rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ay.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 4,
        "end": 80,
        "id": {
          "commentStart": 4,
          "end": 9,
          "moduleId": 0,
          "name": "props",
          "start": 4,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 12,
          "end": 80,
          "moduleId": 0,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "1": [
                {
                  "commentStart": 44,
                  "end": 52,
                  "moduleId": 0,
                  "start": 44,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "b: 2,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "properties": [
            {
              "commentStart": 26,
              "end": 30,
              "key": {
                "commentStart": 26,
                "end": 27,
                "moduleId": 0,
                "name": "a",
                "start": 26,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 26,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 29,
                "end": 30,
                "moduleId": 0,
                "raw": "1",
                "start": 29,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "commentStart": 65,
              "end": 69,
              "key": {
                "commentStart": 65,
                "end": 66,
                "moduleId": 0,
                "name": "c",
                "start": 65,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 65,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 68,
                "end": 69,
                "moduleId": 0,
                "raw": "3",
                "start": 68,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 3.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 12,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 4,
        "type": "VariableDeclarator"
      },
      "end": 80,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 80,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
