rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__az.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 75,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "props",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 8,
          "end": 75,
          "moduleId": 0,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "1": [
                {
                  "commentStart": 40,
                  "end": 48,
                  "moduleId": 0,
                  "start": 40,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "b: 2,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "properties": [
            {
              "commentStart": 22,
              "end": 26,
              "key": {
                "commentStart": 22,
                "end": 23,
                "moduleId": 0,
                "name": "a",
                "start": 22,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 22,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 25,
                "end": 26,
                "moduleId": 0,
                "raw": "1",
                "start": 25,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "commentStart": 61,
              "end": 65,
              "key": {
                "commentStart": 61,
                "end": 62,
                "moduleId": 0,
                "name": "c",
                "start": 61,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 61,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 64,
                "end": 65,
                "moduleId": 0,
                "raw": "3",
                "start": 64,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 3.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 8,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 75,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 75,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
